--- a/06-spring-boot-spring-mvc/thymeleafdemo/thymeleafdemo/src/main/resources/templates/helloworld-form.html
+++ b/06-spring-boot-spring-mvc/thymeleafdemo/thymeleafdemo/src/main/resources/templates/helloworld-form.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 
-<form th:action="@{/processForm}" method="GET">
+<form th:action="@{/shout}" method="GET">
 
     <input type="text" name="studentName" placeholder="Whats your name?"/>
     <input type="submit"/>
