--- a/06-spring-boot-spring-mvc/thymeleafdemo/thymeleafdemo/src/main/resources/templates/helloworld.html
+++ b/06-spring-boot-spring-mvc/thymeleafdemo/thymeleafdemo/src/main/resources/templates/helloworld.html
@@ -6,10 +6,13 @@
 </head>
 
 <body>
-    Hello world of Spring Boot
+Hello world of Spring Boot
 
 <br><br>
-Student name: <span th:text="${param.studentName}" />
+Student name: <span th:text="${param.studentName}"/>
+<br><br>
+
+The message: <span th:text="${message}"/>
 
 </body>
 
