--- a/06-spring-boot-spring-mvc/thymeleafdemo/thymeleafdemo/src/main/resources/templates/student-form.html
+++ b/06-spring-boot-spring-mvc/thymeleafdemo/thymeleafdemo/src/main/resources/templates/student-form.html
@@ -15,6 +15,12 @@
   Last name: <input type="text" th:field="*{lastName}" />
   <br><br>
 
+    Country:
+
+    <select th:field="*{country}">
+        <option th:each="country : ${countries}" th:value="${country}" th:text="${country}"/>
+    </select>
+
   <input type="submit" value="Submit" />
 
 </form>
