Added radio button for programming lang

--- a/06-spring-boot-spring-mvc/thymeleafdemo/thymeleafdemo/src/main/resources/templates/student-confirmation.html
+++ b/06-spring-boot-spring-mvc/thymeleafdemo/thymeleafdemo/src/main/resources/templates/student-confirmation.html
@@ -14,5 +14,9 @@ The student registration is confirmed: <span th:text="${student.firstName} + ' '
 
 Country: <span th:text="${student.country}" />
 
+<br><br>
+
+Favorite Programming Language: <span th:text="${student.favLanguage}" />
+
 </body>
 </html>
