Added checkbox for favorite systems

--- a/06-spring-boot-spring-mvc/thymeleafdemo/thymeleafdemo/src/main/resources/templates/student-form.html
+++ b/06-spring-boot-spring-mvc/thymeleafdemo/thymeleafdemo/src/main/resources/templates/student-form.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="UTF-8">
     <title>Student Registration Form</title>
@@ -10,10 +10,10 @@
 
 <form th:action="@{/processStudentForm}" th:object="${student}" method="POST">
 
-  First name: <input type="text" th:field="*{firstName}" />
-  <br><br>
-  Last name: <input type="text" th:field="*{lastName}" />
-  <br><br>
+    First name: <input type="text" th:field="*{firstName}"/>
+    <br><br>
+    Last name: <input type="text" th:field="*{lastName}"/>
+    <br><br>
 
     Country:
 
@@ -25,15 +25,24 @@
 
     Favorite Programming Language:
 
-    <input type = "radio"
-           th:field ="*{favLanguage}"
+    <input type="radio"
+           th:field="*{favLanguage}"
            th:each="language : ${languages}"
            th:value="${language}"
            th:text="${language}"/>
 
     <br><br>
 
-  <input type="submit" value="Submit" />
+    Favorite Operating Systems:
+
+    <input type="checkbox"
+           th:field="*{favSystems}"
+           th:each="system : ${systems}"
+           th:value="${system}"
+           th:text="${system}"/>
+
+    <br><br>
+    <input type="submit" value="Submit"/>
 
 </form>
 
