--- a/06-spring-boot-spring-mvc/thymeleafdemo/thymeleafdemo/src/main/resources/templates/student-confirmation.html
+++ b/06-spring-boot-spring-mvc/thymeleafdemo/thymeleafdemo/src/main/resources/templates/student-confirmation.html
@@ -18,5 +18,13 @@ Country: <span th:text="${student.country}" />
 
 Favorite Programming Language: <span th:text="${student.favLanguage}" />
 
+<br><br>
+
+Favorite Operating Systems:
+
+<ul>
+  <li th:each="system : ${student.favSystems}" th:text="${system}" />
+</ul>
+
 </body>
 </html>
