Add new field with Min Max ranges

--- a/06-spring-boot-spring-mvc/validationdemo/src/main/resources/templates/customer-form.html
+++ b/06-spring-boot-spring-mvc/validationdemo/src/main/resources/templates/customer-form.html
@@ -22,6 +22,12 @@
           class="error"></span>
     <br>
 
+    Free passes: <input type="text" th:field="*{freePasses}">
+
+    <span th:if="${#fields.hasErrors('freePasses')}"
+          th:errors="*{freePasses}"
+          class="error"></span>
+    <br>
     <input type="submit" value="Submit"/>
 
 </form>
