Add postal code field with regex

--- a/06-spring-boot-spring-mvc/validationdemo/src/main/resources/templates/customer-confirmation.html
+++ b/06-spring-boot-spring-mvc/validationdemo/src/main/resources/templates/customer-confirmation.html
@@ -7,10 +7,10 @@
 <body>
 
 The customer is confirmed: <span th:text="${customer.firstName} + ' ' + ${customer.lastName}"></span>
-
-<br>
-
+<br><br>
 Free passes: <span th:text="${customer.freePasses}" />
+<br><br>
+Postal Code: <span th:text="${customer.postalCode}" />
 
 </body>
 </html>
