--- a/06-spring-boot-spring-mvc/validationdemo/src/main/resources/templates/customer-form.html
+++ b/06-spring-boot-spring-mvc/validationdemo/src/main/resources/templates/customer-form.html
@@ -15,19 +15,30 @@
 
 <form th:action="@{/processForm}" th:object="${customer}" method=POST>
 
-    First Name: <input type="text" th:field="*{firstName}"><br>
+    First Name: <input type="text" th:field="*{firstName}">
+
+    <br><br>
+
     Last Name (*): <input type="text" th:field="*{lastName}">
     <span th:if="${#fields.hasErrors('lastName')}"
           th:errors="*{lastName}"
           class="error"></span>
-    <br>
+    <br><br>
 
     Free passes: <input type="text" th:field="*{freePasses}">
 
     <span th:if="${#fields.hasErrors('freePasses')}"
           th:errors="*{freePasses}"
           class="error"></span>
-    <br>
+    <br><br>
+
+    Postal Code: <input type="text" th:field="*{postalCode}">
+
+    <span th:if="${#fields.hasErrors('postalCode')}"
+          th:errors="*{postalCode}"
+          class="error"></span>
+    <br><br>
+
     <input type="submit" value="Submit"/>
 
 </form>
