--- a/06-spring-boot-spring-mvc/validationdemo/src/main/resources/templates/customer-confirmation.html
+++ b/06-spring-boot-spring-mvc/validationdemo/src/main/resources/templates/customer-confirmation.html
@@ -11,6 +11,8 @@ The customer is confirmed: <span th:text="${customer.firstName} + ' ' + ${custom
 Free passes: <span th:text="${customer.freePasses}" />
 <br><br>
 Postal Code: <span th:text="${customer.postalCode}" />
+<br><br>
+Course Code: <span th:text="${customer.courseCode}" />
 
 </body>
 </html>
