--- a/07-spring-boot-spring-mvc-crud/00-spring-boot-spring-mvc-crud-starter-code/src/main/resources/templates/list-employees.html
+++ b/07-spring-boot-spring-mvc-crud/00-spring-boot-spring-mvc-crud-starter-code/src/main/resources/templates/list-employees.html
@@ -3,11 +3,38 @@
 <head>
     <meta charset="UTF-8">
     <title>Employee Directory</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
 </head>
 <body>
 
-<span th:text="${employees}"/>
+<div class="container">
 
+    <h3>Employee Directory</h3>
+    <hr>
+
+    <table class="table table-bordered table-striped">
+        <thead class="thead-dark">
+            <tr>
+                <th>First name</th>
+                <th>Last name</th>
+                <th>Email name</th>
+            </tr>
+        </thead>
+
+        <tbody>
+            <tr th:each="tempEmployee : ${employees}">
+
+                <td th:text="${tempEmployee.firstName}"></td>
+                <td th:text="${tempEmployee.lastName}"></td>
+                <td th:text="${tempEmployee.email}"></td>
+
+            </tr>
+        </tbody>
+
+    </table>
+
+</div>
 
 </body>
 </html>
