--- a/07-spring-boot-spring-mvc-crud/00-spring-boot-spring-mvc-crud-starter-code/src/main/resources/templates/employees/employee-form.html
+++ b/07-spring-boot-spring-mvc-crud/00-spring-boot-spring-mvc-crud-starter-code/src/main/resources/templates/employees/employee-form.html
@@ -15,7 +15,7 @@
 
     <p class="h4 mb-4">Save Employee</p>
     <form action="#" th:action="@{/employees/save}"
-                     th:object="${employee}" method="POST">
+          th:object="${employee}" method="POST">
         <input type="text" th:field="*{firstName}"
                class="form-control mb-4 w-25" placeholder="First Name">
         <input type="text" th:field="*{lastName}"
@@ -24,8 +24,10 @@
                class="form-control mb-4 w-25" placeholder="Email">
 
         <button type="submit" class="btn btn-info col-2">Save</button>
-
     </form>
+
+    <hr>
+    <a th:href="@{/employees/list}">Back to Employees List</a>
 
 </div>
 
