--- a/07-spring-boot-spring-mvc-crud/00-spring-boot-spring-mvc-crud-starter-code/src/main/resources/templates/employees/list-employees.html
+++ b/07-spring-boot-spring-mvc-crud/00-spring-boot-spring-mvc-crud-starter-code/src/main/resources/templates/employees/list-employees.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <title>Employee Directory</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
 </head>
 <body>
 
@@ -13,29 +14,41 @@
     <h3>Employee Directory</h3>
     <hr>
 
-    <a th:ref="@{/employees/showFormForAdd}"
-        class="btn btn-primary btn-sm mb-3">
+    <a th:href="@{/employees/showFormForAdd}"
+       class="btn btn-primary btn-sm mb-3">
         Add Employee
     </a>
 
 
     <table class="table table-bordered table-striped">
         <thead class="thead-dark">
-            <tr>
-                <th>First name</th>
-                <th>Last name</th>
-                <th>Email name</th>
-            </tr>
+        <tr>
+            <th>First name</th>
+            <th>Last name</th>
+            <th>Email name</th>
+            <th>Action</th>
+        </tr>
         </thead>
 
         <tbody>
-            <tr th:each="tempEmployee : ${employees}">
+        <tr th:each="tempEmployee : ${employees}">
 
-                <td th:text="${tempEmployee.firstName}"></td>
-                <td th:text="${tempEmployee.lastName}"></td>
-                <td th:text="${tempEmployee.email}"></td>
+            <td th:text="${tempEmployee.firstName}"></td>
+            <td th:text="${tempEmployee.lastName}"></td>
+            <td th:text="${tempEmployee.email}"></td>
+            <td>
+                <a th:href="@{/employees/showFormForUpdate(employeeId=${tempEmployee.id})}"
+                   class="btn btn-info btn-sm">
+                    Update
+                </a>
 
-            </tr>
+                <a th:href="@{/employees/delete(employeeId=${tempEmployee.id})}"
+                   class="btn btn-danger btn-sm"
+                   onclick="if (!(confirm('Are you sure you want to delete this employee?'))) return false">
+                    Delete
+
+            </td>
+        </tr>
         </tbody>
 
     </table>
