Add custom error message and quick css

--- a/08-spring-boot-spring-mvc-security/01-spring-boot-spring-mvc-security-default/src/main/resources/templates/plain-login.html
+++ b/08-spring-boot-spring-mvc-security/01-spring-boot-spring-mvc-security-default/src/main/resources/templates/plain-login.html
@@ -3,12 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <title>Custom Login Page</title>
+
+    <style>
+        .failed {
+            color: red;
+        }
+    </style>
 </head>
 <body>
 
 <h3>My Custom Login Page</h3>
 
 <form method="POST" action="#" th:action="@{/authenticateTheUser}">
+
+    <div th:if="${param.error}">
+        <i class="failed">You entered invalid password</i>
+    </div>
 
   <p>
     User name: <input type="text" name="username">
