--- a/08-spring-boot-spring-mvc-security/01-spring-boot-spring-mvc-security-default/src/main/resources/templates/home.html
+++ b/08-spring-boot-spring-mvc-security/01-spring-boot-spring-mvc-security-default/src/main/resources/templates/home.html
@@ -7,8 +7,14 @@
 <body>
       <h2>Huragan Company Home Page</h2>
       <hr>
+      <p>
       Welcome to Huragan Company Home Page
+      </p>
 
+    <form action="#" th:action="@{/logout}" method="POST">
+
+        <input type="submit" value="Logout"/>
+    </form>
 
 </body>
 </html>
